Kubestart/apache-svc.yml
kind: Service
apiVersion: v1


metadata:
  name: apache-service
  namespace: online-shop-ns
spec:
  selector:
    app: apache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
