Kubestart/service.yml
kind: Service
apiVersion: v1

metadata:
  name: online-shop-svc
  namespace: online-shop-ns
spec:
  selector:
    app: online-shop
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
